--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,5 +10,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script>
   </body>
 </html>
