--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,6 @@
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.2/html2pdf.bundle.min.js"></script>
     <!-- debuggg -->
-    <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script>
+    <!-- <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script> -->
   </body>
 </html>
