--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
     <script type="module" src="/src/app/main.tsx"></script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.2/html2pdf.bundle.min.js"></script>
-    <!-- debuggg -->
-    <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script>
+    <!-- debuggg
+    <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script> -->
   </body>
 </html>
